tests/jsx_intrinsics.builtin/jsx_intrinsics.builtin.exp
Error: main.js:6
  6: class CustomComponent extends React.Component<{prop: string}, void> {}
                                                   ^^^^^^^^^^^^^^ property `prop`. Property not found in
 13: var c: Element<Class<React.Component<{prop1: string}, void>>> =
                                          ^^^^^^^^^^^^^^^ object type

Error: main.js:11
 11: var b: Element<typeof CustomComponentNope> =
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
                                                                   v-
158: declare type React$Element<+ElementType: React$ElementType> = {|
159:   +type: ElementType,
160:   +props: React$ElementProps<ElementType>,
...:
163: |};
     -^ object type. See lib: <BUILTINS>/react.js:158
  Property `type` is incompatible:
      6: class CustomComponent extends React.Component<{prop: string}, void> {}
               ^^^^^^^^^^^^^^^ CustomComponent. This type is incompatible with
      7: class CustomComponentNope extends React.Component<{prop: string}, void> {}
               ^^^^^^^^^^^^^^^^^^^ CustomComponentNope

Error: main.js:13
 13: var c: Element<Class<React.Component<{prop1: string}, void>>> =
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
                                                                   v-
158: declare type React$Element<+ElementType: React$ElementType> = {|
159:   +type: ElementType,
160:   +props: React$ElementProps<ElementType>,
...:
163: |};
     -^ object type. See lib: <BUILTINS>/react.js:158
  Property `props` is incompatible:
      6: class CustomComponent extends React.Component<{prop: string}, void> {}
                                                       ^^^^^^^^^^^^^^ object type. This type is incompatible with
    160:   +props: React$ElementProps<ElementType>,
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See lib: <BUILTINS>/react.js:160
      Property `prop1` is incompatible:
        160:   +props: React$ElementProps<ElementType>,
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `prop1`. Property not found in. See lib: <BUILTINS>/react.js:160
          6: class CustomComponent extends React.Component<{prop: string}, void> {}
                                                           ^^^^^^^^^^^^^^ object type

Error: main.js:13
 13: var c: Element<Class<React.Component<{prop1: string}, void>>> =
                                          ^^^^^^^^^^^^^^^ property `prop1`. Property not found in
  6: class CustomComponent extends React.Component<{prop: string}, void> {}
                                                   ^^^^^^^^^^^^^^ object type

Error: main.js:21
 21: var e: Element<'span'> = <div not_a_real_attr="asdf" />;
            ^^^^^^^^^^^^^^^ object type. This type is incompatible with
                                                                   v-
158: declare type React$Element<+ElementType: React$ElementType> = {|
159:   +type: ElementType,
160:   +props: React$ElementProps<ElementType>,
...:
163: |};
     -^ object type. See lib: <BUILTINS>/react.js:158
  Property `type` is incompatible:
     21: var e: Element<'span'> = <div not_a_real_attr="asdf" />;
                                   ^^^ React element `div`. Expected string literal `span`, got `div` instead
     21: var e: Element<'span'> = <div not_a_real_attr="asdf" />;
                        ^^^^^^ string literal `span`


Found 5 errors
